SERVER-92337 Reset variables for $unionWith during second execution of subpipeine for explain (#26029)

GitOrigin-RevId: 3706ed48ec7ff9eb606181d300d65757350606d4